used current java-version features and some cleanups